add myLabel class and styling

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <h1 class="heading">FIND USER</h1>
     <div class="counter">
       <form class="myForm" method="post" id="myForm">
-        <label for="user">Github user<br>
+        <label class="myLabel" for="user">Github user<br>
           <input class="username" required placeholder="please enter username" type="text" name="username"
             id="username">
         </label>
