add container in html and styles

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
   <main class="main">
     <h1 class="heading">FIND USER</h1>
-    <div class="counter">
+    <div class="container">
       <form class="myForm" method="post" id="myForm">
         <label class="myLabel" for="user">Github user<br>
           <input class="username" required placeholder="please enter username" type="text" name="username"
