add icon file, and icon in meta in html

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
   <meta property="og:description" content="" />
   <!-- full url with http(s) ie.  -->
   <meta property="og:url" content="https://github.com/kakuliniec/Task" />
-  <!-- full url to the image with http(s) ie. https://kakuliniec.github.io/my-repo/assets/img/fb.png. Facebook suggests at least 1200 x 630. -->
-  <!-- <meta property="og:image" content="https://github.com/kakuliniec/hydrapp/src/assets/img/icon-192x192.png" /> -->
+ <meta property="og:image" content="https://github.com/kakuliniec/task/src/assets/icon/icon.png" />
 
   <link rel="stylesheet" href="./src/scss/main.scss" />
 </head>
